# yxi-chat-cli

./: .gitignore  README.md  TODO.md  chatbot.py  install.sh  install.sh.sig  main.py  mcp_client.py  merged.json  output.java  pyproject.toml  yxi_pubkey.asc
output/: Output.java
samples/: demo.docx  test-case.xlsx
tasks/json_to_java/: Dockerfile  generate_java.py  langgraph_agent.py  mcp_service.py
tasks/obsidian_mcp/: Dockerfile  mcp_service.py  requirements.txt
tasks/report_generator/: __init__.py
tasks/service_deploy/: __init__.py
tasks/test_ui/: Dockerfile  __init__.py  generate_tests.py  mcp_service.py  requirements.txt  start.sh
tasks/word_table_export/: Dockerfile  __init__.py  export_tables.py  mcp_service.py  requirements.txt
tmp-bin/: yxi
tmp-home/.config/yxi/: update.sh
yxi_chat_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
